# src/docs/swagger-output.json
@@ -5,7 +5,7 @@
     "description": "Users can buy or read books on the platform, and participate in group discussions about the books and authors.",
     "contact": {
       "name": "API Support",
-      "url": "http://13.200.229.129:3000/",
+      "url": "localhost:3000",
       "email": "abulfaiz428@gmail.com"
     },
     "author": {
@@ -14,7 +14,7 @@
     },
     "version": "1.0.0"
   },
-  "host": "13.200.229.129:3000",
+  "host": "localhost:3000",
   "basePath": "/",
   "schemes": "['http','https']",
   "securityDefinitions": {
@@ -391,7 +391,12 @@
             "type": "string"
           },
           {
-            "name": "query",
+            "name": "search",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "genres",
             "in": "query",
             "type": "string"
           }
